--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.14"
   }
 }
