--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
-    "ethers": "^5.6.9",
-    "feishu-bot": "^1.0.5"
+    "ethers": "^5.6.9"
   },
   "devDependencies": {
     "@types/node": "^18.7.14"
